fixed line length, fixed issue when file name lenth is too long and improvements

--- a/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/commons/css/workspace-explorer.css
+++ b/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/commons/css/workspace-explorer.css
@@ -119,3 +119,21 @@
 .vakata-context li > a .vakata-contextmenu-sep{
     display: none;
 }
+
+.workspace-explorer-container .jstree-default-small > .jstree-container-ul > .jstree-node{
+    display:inline-block;
+    width:180px;
+    white-space: nowrap;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+}
+
+.workspace-explorer-container .jstree-default-small > .jstree-container-ul > .jstree-node:hover{
+    overflow: visible;
+}
+
+
+
+
+
+
